<resources>
    <string name="app_name">Smart Home</string>
    <string name="login_login">Login</string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_username">Username</string>
    <string name="login_title">Login to Smart Home</string>
    <string name="login_ime_action_label">Login</string>
    <string name="content_desc_toggle_light">Toggle light</string>
    <string name="login_logging_in">Logging in...</string>
</resources>
